--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
 <html>
+ <head>
+  <meta charset="utf-8">
+  <meta name="viewprot" content="width=device-width, initial-scale=1.0">
+  <title>Hello my world</title>
+ </head>
 </html>
 	
