--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewprot" content="width=device-width, initial-scale=1.0">
   <title>Hello my world</title>
+  <style>
+   body {
+	   background-color: #000000;
+	   color: #ffffff;
+   }
  </head>
 =======
   <body>
